--- a/SL/appsettings.json
+++ b/SL/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SistemaGestionPoliza": "Server=.; Database=SistemaGestionPoliza; TrustServerCertificate=True; User ID=sa; Password=pass@word1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
