faltan validaciones y que el rol de Admin y broker puedan cotizar la poliza

--- a/PL_MVC/appsettings.json
+++ b/PL_MVC/appsettings.json
@@ -1,9 +1,45 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "SistemaGestionPoliza": "Server=JORGEPC\\SQLEXPRESS; Database=SistemaGestionPoliza; TrustServerCertificate=True; User ID=sa; Password=pass@word1;"
+    },
+    "EndPointLogin": {
+        "LoginEndPoint": "http://localhost:5233/api/Login/Login"
+
+    },
+
+    "EndPointsPoliza": {
+        "PolizaGetAllEndPoint": "http://localhost:5233/api/Poliza/GetAllByIdUsuario/",
+        "PolizaGetByIdEndPoint": "http://localhost:5233/api/Poliza/GetById/",
+        "PolizaAddEndPoint": "http://localhost:5233/api/Poliza/Add",
+        "PolizaUpdateEndPoint": "http://localhost:5233/api/Poliza/Update",
+        "PolizaDeleteEndPoint": "http://localhost:5233/api/Poliza/Delete/",
+        "EstatusGetAllEndPoint": "http://localhost:5233/api/Estatus/GetAll",
+        "EstatusCambioEndPoint": "http://localhost:5233/api/Estatus/CambiarEstatus/",
+        "GeneroGetAllEndPoint": "http://localhost:5233/api/Genero/GetAll",
+        "TipoPolizaGetAllEndPoint": "http://localhost:5233/api/TipoPoliza/GetAll",
+        "ObtenerNumeroPolizaEndPoint": "http://localhost:5233/api/Poliza/ObtenerNumeroPoliza"
+    },
+
+    "EndPointsUsuario": {
+        "UsuarioGetAllEndPoint": "http://localhost:5233/api/Usuario/GetAll",
+        "UsuarioGetByIdEndPoint": "http://localhost:5233/api/Usuario/GetById/",
+        "UsuarioAddEndPoint": "http://localhost:5233/api/Usuario/Add",
+        "UsuarioUpdateEndPoint": "http://localhost:5233/api/Usuario/Update",
+        "UsuarioDeleteEndPoint": "http://localhost:5233/api/Usuario/Delete/",
+        "RolGetAllEndPoint": "http://localhost:5233/api/Rol/GetAll"
+    },
+
+    "EndPointsDireccion": {
+        "PaisGetAllEndPoint": "http://localhost:5233/api/Pais/GetAll",
+        "EstadoGetByIdPaisEndPoint": "http://localhost:5233/api/Estado/GetByIdPais/",
+        "MunicipioGetByIdEstado": "http://localhost:5233/api/Municipio/GetByIdEstado/",
+        "ColoniaGetByIdMunicipio": "http://localhost:5233/api/Colonia/GetByIdMunicipio/"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
